[project]
name = "steam-linker"
version = "0.1.0"
description = ""
authors = [
    {name = "Kekemui",email = "kekemui@kekemui.gg"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "steam[client] (>=1.4.4,<2.0.0)",
    "vdf (>=3.4,<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
